add Photo public

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 Batch 2, focusing on Cloud Computing. </div>
         </div>
         <div class="hero-right">
-            <img src="profile.jpg" alt="Han Nguyen">
+            <img src="https://storage.googleapis.com/profile-2155/profile.jpg" alt="Han Nguyen">
             <div class="socials">
                 <a href="https://www.instagram.com/feri_fab/profilecard/?igsh=d2ljb2loOG85cWZo" target="_blank"><i
                         class="fab fa-instagram"></i> @feri_fab</a>
